// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Media Asset Page A11y I can see the skip to content link 1`] = `"إذهب الى المحتوى"`;

exports[`AMP Media Asset Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Media Asset Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Media Asset Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=5&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Atopcat%3Acurie%3Aasset%3A22d6ef3c-8f6e-11e5-b707-b2517c19ac20]&x2=[amp]&x3=[news-arabic]&x4=[ar]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article-media-asset]&x8=[simorgh]&x9=[%D8%B4%D8%B1%D9%83%D8%A9%2520%D8%B4%D8%A7%D8%B1%D8%A8%2520%D9%84%D9%84%D8%A5%D9%84%D9%83%D8%AA%D8%B1%D9%88%D9%86%D9%8A%D8%A7%D8%AA%2520%D8%AA%D8%AD%D8%AB%2520%D9%85%D9%88%D8%B8%D9%81%D9%8A%D9%87%D8%A7%2520%D8%B9%D9%84%D9%89%2520%D8%B4%D8%B1%D8%A7%D8%A1%2520%D9%85%D9%86%D8%AA%D8%AC%D8%A7%D8%AA%D9%87%D8%A7%2520-%2520BBC%2520News%2520%D8%B9%D8%B1%D8%A8%D9%8A]&x11=[2015-11-20T10%3A09%3A33.000Z]&x12=[2015-11-20T10%3A09%3A33.000Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Media Asset Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "article-media-asset",
    "domain": "test.bbc.co.uk",
    "sections": "Arabic, Arabic - MAP",
    "title": "شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Media Asset Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, عربي",
  "url": "/arabic",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 2`] = `
{
  "text": "لماذا يمكنك الاعتماد على أخبار بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-49283069",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 3`] = `
{
  "text": "شروط الاستخدام",
  "url": "https://www.bbc.com/arabic/institutional-37731351",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 4`] = `
{
  "text": "عن بي بي سي",
  "url": "https://www.bbc.com/arabic/institutional-37731352",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 5`] = `
{
  "text": "سياسة الخصوصية",
  "url": "https://www.bbc.com/arabic/institutional-37731353",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 6`] = `
{
  "text": "ملفات الارتباط Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 7`] = `
{
  "text": "اتصل بـ بي بي سي",
  "url": "https://www.bbc.co.uk/arabic/send/u50853203",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 8`] = `
{
  "text": "سياستنا بخصوص الروابط الخارجية.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Media Asset Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Media Asset Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/arabic"`;

exports[`AMP Media Asset Page Footer Paragraphs should match text 1`] = `"© 2024 بي بي سي. بي بي سي ليست مسؤولة عن محتوى المواقع الخارجية. سياستنا بخصوص الروابط الخارجية."`;

exports[`AMP Media Asset Page Header I can see the branding 1`] = `"BBC News, عربي"`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 1`] = `
{
  "text": "رئيسية",
  "url": "/arabic",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 2`] = `
{
  "text": "أخبار",
  "url": "/arabic/topics/cv2xyrnr8dnt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 3`] = `
{
  "text": "اقتصاد",
  "url": "/arabic/topics/cqywj97d487t",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 4`] = `
{
  "text": "صحة وعلوم",
  "url": "/arabic/topics/clmj3d7282gt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 5`] = `
{
  "text": "رياضة",
  "url": "/arabic/topics/cyx5kw7g1j2t",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 6`] = `
{
  "text": "فيديو",
  "url": "/arabic/topics/cz9mm6r1q5et",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 7`] = `
{
  "text": "تحقيقات",
  "url": "/arabic/topics/c51nnzdeg9zt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 8`] = `
{
  "text": "بودكاست",
  "url": "/arabic/topics/cljddp5lw0dt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 9`] = `
{
  "text": "برامجنا",
  "url": "/arabic/topics/crgyknwdlwnt",
}
`;

exports[`AMP Media Asset Page Main heading should match text 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-72x72.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-96x96.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-128x128.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-144x144.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-152x152.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-180x180.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-192x192.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-384x384.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/arabic/images/icons/icon-512x512.png",
}
`;

exports[`AMP Media Asset Page SEO Canonical link 1`] = `"http://localhost:7080/arabic/worldnews/2015/11/151120_t_arabic_av"`;

exports[`AMP Media Asset Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Media Asset Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Media Asset Page SEO Heading level 1 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`AMP Media Asset Page SEO Lang attribute 1`] = `"ar"`;

exports[`AMP Media Asset Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "noBylinesPolicy": "https://www.bbc.com/arabic/institutional-49283069#authorexpertise",
      },
      "dateModified": "2015-11-20T10:09:33.000Z",
      "datePublished": "2015-11-20T10:09:33.000Z",
      "headline": "شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ar",
        "name": "Arabic",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/arabic/worldnews/2015/11/151120_t_arabic_av",
        "@type": "WebPage",
        "name": "شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/arabic.png",
          "width": 1024,
        },
        "name": "BBC News عربي",
        "publishingPrinciples": "https://www.bbc.com/arabic/institutional-49283069",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg",
      "url": "http://localhost:7080/arabic/worldnews/2015/11/151120_t_arabic_av",
    },
  ],
}
`;

exports[`AMP Media Asset Page SEO OG description 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`AMP Media Asset Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg"`;

exports[`AMP Media Asset Page SEO OG image alt 1`] = `"BBC News عربي"`;

exports[`AMP Media Asset Page SEO OG locale 1`] = `"ar"`;

exports[`AMP Media Asset Page SEO OG site name 1`] = `"BBC News عربي"`;

exports[`AMP Media Asset Page SEO OG title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`AMP Media Asset Page SEO OG type 1`] = `"article"`;

exports[`AMP Media Asset Page SEO OG url 1`] = `"http://localhost:7080/arabic/worldnews/2015/11/151120_t_arabic_av"`;

exports[`AMP Media Asset Page SEO Page title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`AMP Media Asset Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Media Asset Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Media Asset Page SEO Twitter creator 1`] = `"@BBCArabic"`;

exports[`AMP Media Asset Page SEO Twitter description 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها"`;

exports[`AMP Media Asset Page SEO Twitter image alt 1`] = `"BBC News عربي"`;

exports[`AMP Media Asset Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_arabic/worldservice/test/assets/images/2014/09/22/140922130059_144x81.jpg"`;

exports[`AMP Media Asset Page SEO Twitter site 1`] = `"@BBCArabic"`;

exports[`AMP Media Asset Page SEO Twitter title 1`] = `"شركة شارب للإلكترونيات تحث موظفيها على شراء منتجاتها - BBC News عربي"`;

exports[`AMP Media Asset Page Timestamp should match text and date 1`] = `
{
  "date": "2015-11-20",
  "text": "20 نوفمبر/ تشرين الثاني 2015",
}
`;
